# beatly

./: .gitignore  README.md  diagnose.sh  package-lock.json  package.json  setup.sh
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/routes/: auth.py  playlists.py  tracks.py  uploads.py
backend/app/services/: analysis.py
backend/tests/: test_analysis.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: soundcloud.ts
frontend/src/audio/: AudioEngine.ts  TransitionPlanner.ts  index.ts
frontend/src/components/: AnalysisPanel.tsx  DJDeck.tsx  FileUpload.tsx  Icons.tsx  MixerControls.tsx  MixingTools.tsx  PlaylistPicker.tsx  SoundCloudAuth.tsx  StemControls.tsx  TrackList.tsx  TransitionIndicator.tsx  ZoneManager.tsx
frontend/src/store/: useStore.ts
frontend/src/test/: compatibility.test.ts  setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: compatibility.ts
