[project]
name = "beatly-backend"
version = "1.0.0"
description = "Backend API for Beatly DJ mixing application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "librosa>=0.10.1",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "soundfile>=0.12.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
stems = [
    "demucs>=4.0.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
